Added header, styling, dynamic tile generation

--- a/src/Components/CardHolder/CardHolder.css
+++ b/src/Components/CardHolder/CardHolder.css
@@ -1,10 +1,16 @@
+#content-section {
+  position: relative;
+  height: 95%;
+  width: 100%;
+  background-color: #596C81;
+}
 .card-container {
   display: grid;
   grid-template-columns: repeat(4, minmax(25%, 50%));
   grid-template-rows: repeat(3, minmax(25%, 50%));
   grid-column-gap: 10px;
   grid-row-gap: 20px;
-  height: 95%;
+  height: 100%;
   width: 80%;
   margin: 0 auto;
   padding-top: 20px;
