--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -3,7 +3,7 @@
   bottom: 0px;
   width: 100%;
   height: 5%;
-  background-color: #A5A4AA;
+  background-color: #ebebeb;
 }
 #footer a, a:visited, a:hover, a:active {
   color: inherit;
