--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,26 +1,43 @@
 #header {
+  display: flex;
+  justify-content: space-between;
   position: relative;
   top: 0px;
   width: 100%;
   height: 8%;
-  background-color: #A5A4AA;
-  border-bottom: 1px solid black;
+  background-color: #0083d8;
+  border-bottom: 2px solid #787878;
   font-family: 'Nunito', sans-serif;
 }
+#header .title-container {
+  display: flex;
+  align-items: center;
+  margin-left: 25px;
+} 
 #header h1 {
   font-size: 3em;
-  float: left;
   margin-top: 1%;
   margin-left: 2%;
   font-weight: 800;
+  color: #fafafa;
+}
+#header form {
+  display: flex;
+  margin-right: 25px;
+  align-items: center;
 }
 #header input {
   color: #fafafa;
-  float: right;
   margin-top: 1.5%;
+  width: 270px;
   margin-right: 4%;
   background-color: transparent;
   outline: 0;
   border-bottom: 2px solid #787878;
   padding: 7px;
+}
+#header img {
+  height: 8vh;
+  margin-left: 1vw;
+  width: 8vh;
 }
