--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,9 +1,15 @@
 #footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5%;
   position: relative;
   bottom: 0px;
-  width: 100%;
-  height: 5%;
-  background-color: #ebebeb;
+  width: 99%;
+  height: 4%;
+  border-top: 2px solid #787878;
+  background-color: #0083d8;
 }
 #footer a, a:visited, a:hover, a:active {
   color: inherit;
